tests/diagnostics/generic_fn_arg_mismatch.kal
# Both arguments share the type parameter T, so they must have the same type.
fn snd<T>(a: T, b: T) -> T = b;
printi(snd(1, 2.0));
